Fix spacing on Contact component for bigger screens

--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -1,6 +1,6 @@
 .contact-container {
   width: 100%;
-  height: 75vh;
+  height: 500px;
   display: flex;
   flex-direction: row;
 }
@@ -48,6 +48,7 @@
 
 .contact {
   width: 80%;
+  height: auto;
   padding: 20px 0 20px 0;
   font-weight: 300;
   text-decoration: none;
@@ -78,7 +79,7 @@ ul:active, li:active {
 
 .contact-image-container {
   width: 100%;
-  height: 75vh;
+  height: 500px;
 }
 
 .contact-image {
