--- a/src/Components/Portfolio/Portfolio.css
+++ b/src/Components/Portfolio/Portfolio.css
@@ -1,6 +1,5 @@
 .projects-outter {
   width: 100%;
-  height: 4000px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -8,10 +7,15 @@
   font-size: 30px;
 }
 
+.portfolio-title {
+  margin-top: 150px;
+}
+
+
 .portfolio-container {
   /* border: 2px red solid; */
   width: 90%; 
-  height: 90%;
+  height: 3500px;
   display: flex;
   flex-direction: column;
 }
